--- a/code/style.css
+++ b/code/style.css
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: #E1EAE7;
+  background-color: #e1eae7;
 }
 
 body {
@@ -47,7 +47,7 @@ nav ul {
 .active,
 .active img,
 .active a {
-  background-color: #E1EAE7 !important;
+  background-color: #e1eae7 !important;
   color: #435b59 !important;
 }
 
@@ -221,7 +221,7 @@ footer {
   height: 350px;
 }
 
-#full-tornado-chart{
+#full-tornado-chart {
   display: flex;
   width: fit-content;
   justify-content: center;
@@ -234,7 +234,8 @@ footer {
   background-color: white;
 }
 
-#full-tornado-chart h3, #full-tornado-chart p {
+#full-tornado-chart h3,
+#full-tornado-chart p {
   background-color: white;
 }
 
@@ -251,7 +252,7 @@ footer {
   background-color: white;
 }
 
-#full-pie-chart{
+#full-pie-chart {
   display: flex;
   justify-content: center;
   width: fit-content;
@@ -264,11 +265,16 @@ footer {
   background-color: white;
 }
 
-#full-pie-chart h3, #full-pie-chart p {
+#full-pie-chart h3,
+#full-pie-chart p {
   background-color: white;
 }
 
 .maleRect {
+  fill: #c99e39;
+}
+
+.femaleRect {
   width: 10px;
   height: 10px;
   fill: #435b59;
