--- a/ohno/style/style.css
+++ b/ohno/style/style.css
@@ -188,7 +188,7 @@ footer {
 
 }
 
-/* Visualisation Page */
+/* Map Page */
 .visualisation {
   display: flex;
   justify-content: center;
@@ -211,21 +211,6 @@ footer {
   width: 900px;
 }
 
-.RightSide {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  margin: 2rem auto;
-  float: right;
-  padding: 1.5rem;
-  border-radius: 15px;
-  box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.4);
-  background-color: white;
-  width: 900px;
-}
-
-/* Map */
 .mapTitle {
   width: 100%;
   display: flex;
@@ -313,4 +298,115 @@ path.Country {
 
 #tornado-chart {
   margin-top: 1rem;
+}
+
+/*Tornado chart Page*/
+#yearButtons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2em auto;
+}
+
+#yearButtons button {
+  background-color: #435b59;
+  color: white;
+  padding: 0.5rem 1rem;
+  border-radius: 15px;
+  box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.4);
+  margin: 0 1rem;
+  font-size: 1.25rem;
+  border: none;
+  cursor: pointer;
+}
+
+#yearButtons button:hover {
+  background-color: #c99e39;
+}
+
+#svgFemale {
+  float: right;
+  margin-top: 2em;
+  background-color: white;
+}
+
+#svgMale {
+  float: left;
+  margin-top: 2em;
+  background-color: white;
+}
+
+#tornado-chart {
+  float: left;
+  width: max-content;
+  background-color: white;
+  display: flex;
+  justify-content: center;
+  height: 350px;
+}
+
+#full-tornado-chart {
+  display: flex;
+  width: fit-content;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 2em 1em;
+  padding: 0.5rem 1rem;
+  border-radius: 15px;
+  box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.4);
+  background-color: white;
+}
+
+#full-tornado-chart h3,
+#full-tornado-chart p {
+  background-color: white;
+}
+
+#pie-chart {
+  float: right;
+  width: max-content;
+  margin-left: 2vw;
+  background-color: white;
+  height: 350px;
+}
+
+#svgPie {
+  margin-top: 2em;
+  background-color: white;
+}
+
+#full-pie-chart {
+  display: flex;
+  justify-content: center;
+  width: fit-content;
+  align-items: center;
+  flex-direction: column;
+  margin: 2em 1em;
+  padding: 0.5rem 1rem;
+  border-radius: 15px;
+  box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.4);
+  background-color: white;
+}
+
+#full-pie-chart h3,
+#full-pie-chart p {
+  background-color: white;
+}
+
+.maleRect {
+  fill: #c99e39;
+}
+
+.femaleRect {
+  width: 10px;
+  height: 10px;
+  fill: #435b59;
+}
+
+.charts {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 2em auto;
 }
